Fixed greed-adjacent matching bug and title overflow

--- a/css/wv.css
+++ b/css/wv.css
@@ -2,7 +2,8 @@
     cursor: pointer;
     display: inline !important;
     vertical-align: baseline !important;
-    margin-bottom: 0em !important;
+    margin: 0px !important;
+    padding: 0px !important;
     border: 0 !important;
 }
 
@@ -36,7 +37,7 @@
 
 .wv-subtitle{
     font-size: 0.4em;
-    line-height: 1em;
+    line-height: 1.1em;
     text-decoration: none;
     white-space: normal;
 }
@@ -48,6 +49,12 @@
     max-width: 230px;
     font-size: 1.7em;
     white-space: nowrap;
+    overflow: hidden;
+}
+
+.wv-title.wv-reduced {
+    font-size: 1.1em;
+    white-space: normal;
 }
 
 .wv-flag {
